--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,21 +1,61 @@
-background            #191919
-foreground            #b2c8d6
-cursor                #f34a00
-selection_background  #b2c8d6
-color0                #191919
-color8                #191919
-color1                #ff355b
-color9                #ff355b
-color2                #b6e875
-color10               #b6e875
-color3                #ffc150
-color11               #ffc150
-color4                #75d3ff
-color12               #75d4ff
-color5                #b975e6
-color13               #b975e6
-color6                #6cbeb5
-color14               #6cbeb5
-color7                #c1c8d6
-color15               #c1c8d6
-selection_foreground #191919
+# vim:ft=kitty
+
+## name: GitHub Dark
+## author: GitHub
+## license: MIT
+
+#: The basic colors
+
+foreground #c9d1d9
+background #0d1117
+selection_foreground #0d1117
+selection_background #58a6ff
+
+
+#: Cursor colors
+
+cursor #58a6ff
+
+
+#: Tab bar colors
+
+tab_bar_background #010409
+active_tab_foreground #c9d1d9
+active_tab_background #0d1117
+inactive_tab_foreground #8b949e
+inactive_tab_background #010409
+
+
+#: The basic 16 colors
+
+#: black
+color0 #484f58
+color8 #6e7681
+
+#: red
+color1 #ff7b72
+color9 #ffa198
+
+#: green
+color2 #3fb950
+color10 #56d364
+
+#: yellow
+color3 #d29922
+color11 #e3b341
+
+#: blue
+color4 #58a6ff
+color12 #79c0ff
+
+#: magenta
+color5 #bc8cff
+color13 #d2a8ff
+
+#: cyan
+color6 #39c5cf
+color14 #56d4dd
+
+#: white
+color7 #b1bac4
+color15 #ffffff
