--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,18 +1,20 @@
-font_family JetBrainsMono Nerd Font Mono
-bold_font JetBrainsMono NFM Bold
-italic_font JetBrainsMono NFM Italic
+font_family JetBrainsMono Nerd Font Mono 
+bold_font JetBrainsMono NFM Bold 
+italic_font JetBrainsMono NFM Italic 
 bold_italic_font JetBrainsMono NFM Bold Italic
 
-font_size 13
+font_size 12
 modify_font cell_height 150%
 modify_font strikethrough_position 150%
 
-window_padding_width 10 10
+window_padding_width 0 10
 
 tab_bar_edge top
 tab_bar_style separator
 tab_separator " | "
 hide_window_decorations yes
+
+tab_title_template "{index}: {title[title.rfind('/')+1:]}"  
 
 cursor_blink_interval 0
 # wayland_titlebar_color background
@@ -21,6 +23,6 @@ placement_strategy center
 enable_audio_bell no
 
 # BEGIN_KITTY_THEME
-# Bright Lights
+# GitHub Dark
 include current-theme.conf
 # END_KITTY_THEME
