--- a/zed/settings.json
+++ b/zed/settings.json
@@ -1,4 +1,5 @@
 {
+	"icon_theme": "Bearded Icon Theme",
 	"telemetry": {
 		"diagnostics": false,
 		"metrics": false
@@ -6,10 +7,13 @@
 	"vim_mode": true,
 	"autosave": { "after_delay": { "milliseconds": 500 } },
 	"ui_font_size": 16,
-	"buffer_font_size": 14,
+	"buffer_font_size": 15.0,
 	"buffer_line_height": { "custom": 2 },
 	"ui_font_family": "Onest",
-	"buffer_font_family": "JetBrainsMonoNL Nerd Font",
+	"buffer_font_family": "JetBrainsMono Nerd Font Mono",
+	"buffer_font_features": {
+		"calt": true
+	},
 	"theme": {
 		"mode": "system",
 		"light": "One Light",
@@ -39,10 +43,6 @@
 	"chat_panel": {
 		"button": false
 	},
-	"assistant": {
-		"version": "2",
-		"button": false
-	},
 	"tab_bar": {
 		"show_nav_history_buttons": false
 	},
@@ -55,7 +55,22 @@
 	},
 	"languages": {
 		"PHP": {
-			"language_servers": ["phpactor"]
+			"language_servers": ["phpactor"],
+			"formatter": {
+				"code_actions": {
+					"source.fixAll.phpactor.phpCsFixer": true
+				}
+			}
 		}
+	},
+	"experimental.theme_overrides": {
+		"players": [
+			{
+				"cursor": "#5c78e2ff",
+				"background": "#5c78e2ff",
+				"selection": "#5c78e23d"
+			}
+		]
 	}
 }
+
