--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -33,7 +33,7 @@
   "window.enableMenuBarMnemonics": false,
   "window.customMenuBarAltFocus": false,
 
-  "workbench.activityBar.location": "hidden",
+  "workbench.activityBar.location": "default",
   "workbench.layoutControl.enabled": false,
   "workbench.editor.editorActionsLocation": "hidden",
   "workbench.editor.empty.hint": "hidden",
