--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,8 +15,12 @@ set  -g history-limit     2000
 set  -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB,*256col*:RGB,alacritty:RGB,kitty:RGB"
 
-bind -n M-r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
+bind -n M-r source-file ~/.tmux.conf \; display "Reloaded!"
 bind -n M-s choose-tree -s
+
+set-option -g renumber-windows on
+set -g base-index 1
+setw -g pane-base-index 1
 
 bind -n M-1 select-window -t 1
 bind -n M-2 select-window -t 2
@@ -53,11 +57,23 @@ bind -n M-/ copy-mode \; command-prompt -p "(search down)" "send -X search-forwa
 bind -n M-? copy-mode \; command-prompt -p "(search up)"   "send -X search-backward '%%%'"
 
 set -g @plugin 'tmux-plugins/tpm'
-
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'vaaleyard/tmux-dotbar'
 
 set -g @continuum-restore 'on'
 set -g @continuum-save-interval '15'
 
-run '~/.config/tmux/plugins/tpm'
+set -g @tmux-dotbar-bg "#1e1e2e"
+set -g @tmux-dotbar-fg "#585b70"
+set -g @tmux-dotbar-fg-current "#cdd6f4"
+set -g @tmux-dotbar-fg-session "#9399b2"
+set -g @tmux-dotbar-fg-prefix "#cba6f7"
+set -g @tmux-dotbar-right true
+set -g @tmux-dotbar-position top
+set -g @tmux-dotbar-ssh-icon '󰌘'
+set -g @tmux-dotbar-ssh-icon-only false
+set -g @tmux-dotbar-ssh-enabled true
+
+run '~/.tmux/plugins/tpm/tpm'
+
